--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza</title>
-    <link rel="icon" type="image/x-icon" href="/pizzicon.png">
+    <link rel="icon" type="image/x-icon" href="/pizzicon.PNG">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
